# KnuthMorrisPrattPy

./: LICENSE  README.md  setup.cfg  setup.py
src/knuthMorrisPratt/: KnuthMorrisPratt.py  __init__.py
src/knuthMorrisPratt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_unittest.py
