[metadata]
name = knuthMorrisPratt
version = 0.0.1
author = Beatrice Baldassarre
author_email = beabaldassarre@outlook.com
description = A package implementing the Knuth Morris Pratt algorithm for pattern searching.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BeatriceBa/KnuthMorrisPrattPy
project_urls =
    Bug Tracker = https://github.com/BeatriceBa/KnuthMorrisPrattPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src